--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lenis": "^1.3.8",
     "lightswind": "^3.1.15",
     "lucide-react": "^0.539.0",
+    "react-hook-form": "^7.53.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
