--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@fontsource/geist-sans": "^5.2.5",
+    "@formspree/react": "^3.0.0",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
     "lenis": "^1.3.8",
     "lightswind": "^3.1.15",
     "lucide-react": "^0.539.0",
-    "react-hook-form": "^7.53.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.53.0",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4"
   },
